<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient">

    <include
        layout="@layout/normal_toolbar"
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:flow_horizontalBias="0.0"/>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/register_avatar"
        app:layout_constraintBottom_toTopOf="@+id/register_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/account_profile_user_avatar_icon_219236" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/register_username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintBottom_toTopOf="@+id/register_bodyweight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/register_bodyweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        android:hint="@string/register_bodyweight"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/register_heigth"
        app:layout_constraintStart_toStartOf="@+id/register_username"
        app:layout_constraintTop_toBottomOf="@+id/register_username" />

    <EditText
        android:id="@+id/register_heigth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        android:hint="@string/register_heigth"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/register_age"
        app:layout_constraintStart_toStartOf="@+id/register_bodyweight"
        app:layout_constraintTop_toBottomOf="@+id/register_bodyweight" />

    <EditText
        android:id="@+id/register_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        android:hint="@string/register_age"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintStart_toStartOf="@+id/register_heigth"
        app:layout_constraintTop_toBottomOf="@+id/register_heigth" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginBottom="37dp"
        android:text="@string/register_button"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/register_textView"
        app:layout_constraintStart_toStartOf="@+id/register_age"
        app:layout_constraintTop_toBottomOf="@+id/register_age" />

    <TextView
        android:id="@+id/register_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/register_already_user"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/register_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="3dp"
        android:text="@string/register_login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/register_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>