<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    tools:context=".activities.ProfileInfo">

    <include
        android:id="@+id/normal_toolbar"
        layout="@layout/normal_toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="496dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_info_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="32dp"
        android:text="@string/profile_info_username"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_info_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_info_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/profile_info_weight"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_info_age"
        app:layout_constraintStart_toStartOf="@+id/profile_info_username"
        app:layout_constraintTop_toBottomOf="@+id/profile_info_username" />

    <TextView
        android:id="@+id/profile_info_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/profile_info_age"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_info_height"
        app:layout_constraintStart_toStartOf="@+id/profile_info_weight"
        app:layout_constraintTop_toBottomOf="@+id/profile_info_weight" />

    <TextView
        android:id="@+id/profile_info_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:text="@string/profile_info_height"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/profile_info_age"
        app:layout_constraintTop_toBottomOf="@+id/profile_info_age" />

    <Button
        android:id="@+id/profile_info_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/profile_info_edit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_info_height"
        app:layout_constraintVertical_bias="0.206" />

    <Button
        android:id="@+id/profile_info_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="131dp"
        android:text="@string/profile_info_bmi"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_info_edit"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>